--- a/sass/math.scss
+++ b/sass/math.scss
@@ -1,23 +1,9 @@
 ////
 /// @group math
 ///
-/// This provides some common mathemetical functions implemented in pure sass.
-///
-/// The implementations are based on taylor expansions. The `$steps` argument
-/// defines how many steps of the series will be calculated. So a higher number
-/// will result in higher precision.
-///
-/// Taylor expansions converge quickly around their centers, so a decent
-/// approximation can be calculated in constant time.
-///
-/// If the input $x is too far off of the center, it is converted to a closer
-/// value $y in a way that allows to calculate f($x) from f($y). This
-/// conversion uses exact arithmetics and can be done in constant or
-/// logarithmic time.
-///
-/// This approach is havily inspired by
-/// <http://www.sassmeister.com/gist/ad6e6771df050ff3727f>. However, the
-/// implementations are much more efficient.
+/// This provides some common mathemetical functions implemented in pure Sass.
+/// This module was implemented for an older version of Sass, that did not have
+/// the `sass:math` module. This module may no longer be useful.
 ////
 
 /// @type number
@@ -28,110 +14,29 @@ $planifolia-math-steps-default: 32 !default;
 
 /// @return {number}
 @function pi() {
-  @return 3.141592653589793;
+  @return math.$pi;
 }
 
 @function _pf-angle-to-rad($x) {
   @return math.div(0rad + $x, 1rad);
 }
 
-@function _pf-exp-taylor-0($x, $steps) {
-  $item: 1;
-  $result: 1;
-
-  @for $i from 1 to $steps {
-    $item: math.div($item * $x, $i);
-    $result: $result + $item;
-  }
-
-  @return $result;
-}
-
-@function _pf-log-taylor-1($x, $steps) {
-  $z: math.div($x - 1, $x + 1);
-
-  $power: $z;
-  $result: $z;
-
-  @for $i from 1 to $steps {
-    $power: $power * $z * $z;
-    $result: $result + math.div($power, 2 * $i + 1);
-  }
-
-  @return 2 * $result;
-}
-
-@function _pf-sin-taylor-0($x, $steps) {
-  $item: $x;
-  $result: $x;
-
-  @for $i from 1 to $steps {
-    $item: math.div(math.div(-$item * $x * $x, 2 * $i), 2 * $i + 1);
-    $result: $result + $item;
-  }
-
-  @return $result;
-}
-
-@function _pf-asin-taylor-0($x, $steps) {
-  $item: $x;
-  $result: $x;
-
-  @for $i from 1 to $steps {
-    $item: math.div($item * $x * $x * (2 * $i - 1), 2 * $i);
-    $result: $result + math.div($item, 2 * $i + 1);
-  }
-
-  @return $result;
-}
-
-@function _pf-pow-int($base, $exponent) {
-  @if $exponent < 0 {
-    @return math.div(1, _pf-pow-int($base, -$exponent));
-  } @else if $exponent == 0 {
-    @return 1;
-  } @else if $exponent == 1 {
-    @return $base;
-  } @else {
-    $exp: floor($exponent * 0.5);
-    $pow: _pf-pow-int($base, $exp);
-    @if $exp * 2 == $exponent {
-      @return $pow * $pow;
-    } @else {
-      @return $pow * $pow * $base;
-    }
-  }
-}
-
-@function _pf-log10-approx($x) {
-  @if $x <= 0 {
-    @error 'cannot calculate log of #{$x}';
-  } @else if $x >= 1 {
-    // choose the smaller option (-1) because it yields better
-    // results in log().
-    @return str-length(inspect(round($x))) - 1;
-  } @else {
-    @return -1 * str-length(inspect(round(math.div(1, $x))));
-  }
-}
-
 /// @param {number} $x
-/// @param {number} $steps [32] - steps of the taylor expansion
 /// @return {number}
 @function log($x, $steps: $planifolia-math-steps-default) {
-  $log10: 2.302585092994046;
-  $approx: _pf-log10-approx($x);
-  // $y is in range [1, 10]
-  $y: math.div($x, _pf-pow-int(10, $approx));
-  @return $approx * $log10 + _pf-log-taylor-1($y, $steps);
+  @if $x < 0 {
+    @error 'cannot calculate log of #{$x}';
+  }
+  @return math.log($x);
 }
 
 /// @param {number} $x
-/// @param {number} $steps [32] - steps of the taylor expansion
 /// @return {number}
 @function log10($x, $steps: $planifolia-math-steps-default) {
-  $log10: 2.302585092994046;
-  @return math.div(log($x, $steps), $log10);
+  @if $x < 0 {
+    @error 'cannot calculate log of #{$x}';
+  }
+  @return math.log($x, 10);
 }
 
 /// @param {number} $x
@@ -140,18 +45,7 @@ $planifolia-math-steps-default: 32 !default;
 /// @param {number} $steps [32] - steps of the taylor expansion
 /// @return {number}
 @function pow($x, $exponent, $steps: $planifolia-math-steps-default) {
-  $exp1: round($exponent);
-  $exp2: $exponent - $exp1;
-  $pow1: _pf-pow-int($x, $exp1);
-  @if $exp2 == 0 {
-    @return $pow1;
-  } @else if $x == 0 and $exponent > 0 {
-    @return 0;
-  } @else {
-    $y: log($x, $steps) * $exp2;
-    $pow2: _pf-exp-taylor-0($y, $steps);
-    @return $pow1 * $pow2;
-  }
+  @return math.pow($x, $exponent);
 }
 
 /// @param {number} $x
@@ -173,26 +67,14 @@ $planifolia-math-steps-default: 32 !default;
 /// @param {number} $steps [32] - steps of the taylor expansion
 /// @return {number}
 @function sin($x, $steps: $planifolia-math-steps-default) {
-  $x: _pf-angle-to-rad($x);
-
-  @if $x > 2 * pi() {
-    $x: $x % (2 * pi());
-  }
-  @if $x > pi() {
-    @return -1 * sin($x - pi());
-  } @else if $x < 0 {
-    @return -1 * sin(-$x);
-  } @else {
-    @return _pf-sin-taylor-0($x, $steps);
-  }
+  @return math.sin($x);
 }
 
 /// @param {number} $x
 /// @param {number} $steps [32] - steps of the taylor expansion
 /// @return {number}
 @function cos($x, $steps: $planifolia-math-steps-default) {
-  $x: _pf-angle-to-rad($x);
-  @return sin($x + pi() * 0.5, $steps);
+  @return math.cos($x);
 }
 
 /// @param {number} $x
@@ -206,33 +88,27 @@ $planifolia-math-steps-default: 32 !default;
 /// @param {number} $steps [32] - steps of the taylor expansion
 /// @return {number}
 @function asin($x, $steps: $planifolia-math-steps-default) {
-  @if $x < 0 {
-    @return -1 * asin(-$x, $steps);
-  } @else if $x * $x > 0.5 {
-    @return acos(sqrt(1 - $x * $x, $steps), $steps);
-  } @else {
-    @return _pf-asin-taylor-0($x, $steps);
+  @if $x < -1 or $x > 1 {
+    @error 'cannot calculate asin(#{$x})';
   }
+  @return _pf_angle_to_rad(math.asin($x));
 }
 
 /// @param {number} $x
 /// @param {number} $steps [32] - steps of the taylor expansion
 /// @return {number}
 @function acos($x, $steps: $planifolia-math-steps-default) {
-  @return pi() * 0.5 - asin($x, $steps);
+  @if $x < -1 or $x > 1 {
+    @error 'cannot calculate acos(#{$x})';
+  }
+  @return _pf_angle_to_rad(math.acos($x));
 }
 
 /// @param {number} $x
 /// @param {number} $steps [32] - steps of the taylor expansion
 /// @return {number}
 @function atan($x, $steps: $planifolia-math-steps-default) {
-  @if $x == 0 {
-    @return 0;
-  } @else if $x < 0 {
-    @return -1 * atan(-$x, $steps);
-  } @else {
-    @return asin(math.div(1, sqrt(1 + math.div(1, $x * $x), $steps)), $steps);
-  }
+  @return _pf_angle_to_rad(math.atan($x));
 }
 
 /// Computes the angle of the vector (x,y) with the x axis.
@@ -241,23 +117,7 @@ $planifolia-math-steps-default: 32 !default;
 /// @param {number} $steps [32] - steps of the taylor expansion
 /// @return {number}
 @function atan2($y, $x, $steps: $planifolia-math-steps-default) {
-  @if $x > 0 {
-    @return atan(math.div($y, $x), $steps);
-  } @else if $x < 0 {
-    @if $y >= 0 {
-      @return atan(math.div($y, $x), $steps) + pi();
-    } @else {
-      @return atan(math.div($y, $x), $steps) - pi();
-    }
-  } @else {
-    @if $y > 0 {
-      @return pi() * 0.5;
-    } @else if $y < 0 {
-      @return math.div(pi(), -2);
-    } @else {
-      @return 0;
-    }
-  }
+  @return _pf_angle_to_rad(math.atan2($y, $x));
 }
 
 @function _pf-interpolate($a, $b, $t) {
